chore: bump packages

--- a/projects/demo/src/app/modules/select/select.template.html
+++ b/projects/demo/src/app/modules/select/select.template.html
@@ -1,23 +1,27 @@
 <input
     #input
-    class="input"
     readonly
     placeholder="Select value"
+    class="input"
     [value]="value"
     (click)="onClick()"
     (keydown.arrowDown.prevent)="onInputArrowDown()"
 />
-<div *ngIf="open" class="dropdown" (mouseleave)="input.focus()">
+<div
+    *ngIf="open"
+    class="dropdown"
+    (mouseleave)="input.focus()"
+>
     <div
         *ngFor="let item of items; let index = index"
         #option
-        class="option"
         tabindex="-1"
+        class="option"
         (mousemove.silent)="onMouseMove(option)"
         (keydown.arrowDown.silent.prevent)="onArrowDown(index, items.length)"
         (keydown.arrowUp.silent.prevent)="onArrowUp(index)"
         (click)="onSelect(item)"
     >
-        {{item}}
+        {{ item }}
     </div>
 </div>
