--- a/projects/demo/src/app/modules/popup/popup.style.less
+++ b/projects/demo/src/app/modules/popup/popup.style.less
@@ -5,7 +5,9 @@
     top: 20%;
     margin-left: -160px;
     border-radius: 8px;
-    box-shadow: 0 0 1px 0 rgba(27, 31, 38, 0.24), 0 18px 30px 0 rgba(27, 31, 38, 0.5);
+    box-shadow:
+        0 0 1px 0 rgba(27, 31, 38, 0.24),
+        0 18px 30px 0 rgba(27, 31, 38, 0.5);
 
     &::before {
         content: '';
