feat(deps): update Angular

--- a/projects/demo/src/app/modules/static/static.template.html
+++ b/projects/demo/src/app/modules/static/static.template.html
@@ -29,10 +29,7 @@
 <h2>HTML and TypeScript source code for Select component</h2>
 <pre><code [highlight]="(html | async)?.default"></code></pre>
 <pre><code [highlight]="(typescript | async)?.default"></code></pre>
-<blockquote>
-    Keep in mind example is heavily simplified. To use AOT all filtering functions must be exported named functions and
-    arguments number must match.
-</blockquote>
+<blockquote>Keep in mind example is heavily simplified</blockquote>
 <popup
     *ngIf="popup"
     (closed)="onClosed()"
