--- a/projects/demo/src/app/modules/static/static.template.html
+++ b/projects/demo/src/app/modules/static/static.template.html
@@ -27,8 +27,8 @@
     modifier to listen to events in capture phase.
 </blockquote>
 <h2>HTML and TypeScript source code for Select component</h2>
-<pre><code [highlight]="(html | async)?.default"></code></pre>
-<pre><code [highlight]="(typescript | async)?.default"></code></pre>
+<pre><code [highlight]="(html | async)?.default || ''"></code></pre>
+<pre><code [highlight]="(typescript | async)?.default || ''"></code></pre>
 <blockquote>Keep in mind example is heavily simplified</blockquote>
 <popup
     *ngIf="popup"
