feat: use taiga-ui scope

--- a/projects/demo/src/app/modules/static/static.template.html
+++ b/projects/demo/src/app/modules/static/static.template.html
@@ -13,7 +13,7 @@
         event is unnecessary, because when item is already focused, you do not need to do anything and there is no need
         to trigger change detection.
     </p>
-    <code>&#64;tinkoff/ng-event-plugins</code>
+    <code>&#64;taiga-ui/event-plugins</code>
     allows you to skip events using
     <code>.silent</code>
     event modifier and
