--- a/projects/demo/src/app/modules/popup/popup.style.less
+++ b/projects/demo/src/app/modules/popup/popup.style.less
@@ -6,8 +6,8 @@
     margin-left: -10rem;
     border-radius: 0.5rem;
     box-shadow:
-        0 0 0.0625rem 0 rgb(27 31 38 / 24%),
-        0 1.125rem 1.875rem 0 rgb(27 31 38 / 50%);
+        0 0 0.0625rem 0 rgba(27, 31, 38, 0.24),
+        0 1.125rem 1.875rem 0 rgba(27, 31, 38, 0.5);
 
     &::before {
         content: '';
@@ -16,7 +16,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: rgb(0 0 0 / 30%);
+        background: rgba(0, 0, 0, 0.3);
     }
 
     .content {
