--- a/projects/demo/src/app/modules/select/select.style.less
+++ b/projects/demo/src/app/modules/select/select.style.less
@@ -35,7 +35,7 @@
 
     :host._focused & {
         background: #fff;
-        border: 1px solid rgb(97 104 113);
+        border: 1px solid rgb(97, 104, 113);
     }
 }
 
@@ -48,7 +48,7 @@
     border: 1px solid #e7e8ea;
     border-radius: 4px;
     overflow: hidden;
-    box-shadow: 0 0.5rem 1rem -0.25rem rgb(51 51 51 / 20%);
+    box-shadow: 0 0.5rem 1rem -0.25rem rgba(51, 51, 51, 0.2);
 }
 
 .option {
