--- a/projects/demo/src/app/modules/static/static.template.html
+++ b/projects/demo/src/app/modules/static/static.template.html
@@ -20,7 +20,7 @@
     </p>
     <code>&#64;taiga-ui/event-plugins</code>
     allows you to skip events using
-    <code>.silent</code>
+    <code>.zoneless</code>
     event modifier and
     <code>&#64;shouldCall</code>
     decorator. It also adds
